Smaler searchbox to avoid layout problems as admin

--- a/voteit/core/css/basic_style.css
+++ b/voteit/core/css/basic_style.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 	height: 15px;
 	padding: 2px;
 	margin: 10px 10px 5px 0px;
-	width: 170px;
+	width: 140px;
 }
 #search_button {
 
