--- a/voteit/core/css/main.css
+++ b/voteit/core/css/main.css
@@ -48,11 +48,11 @@
 /* Meeting section, the one just below the upper section with logo */
 #meeting-actions {
 	float: left;
-	width: 690px;
+	width: 720px;
 }
 #search_form {
 	float: left;
-	width: 300px;
+	width: 270px;
 }
 /* End meeting section */
 
